--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="cifrao.png" type="image/icon">
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <title>Financeiro</title>
+    <title>Finanças em Ordem</title>
 </head>
 
 <body class="container">
@@ -45,7 +45,7 @@
                     <label for="descrição">Descrição</label>
                 </div>
                 <div class="single-input">
-                    <input type="text" class="input" id="valor" required>
+                    <input type="number" step="0.01" class="input" id="valor" required>
                     <label for="valor">Valor</label>
                 </div>
 
@@ -73,56 +73,56 @@
                 <td>Nubank- Cartão de crédito</td>
                 <td>R$ 200,00</td>
                 <td>Saída</td>
-                <td><ion-icon name="create" class="group-table-icons"></ion-icon>
-                    <ion-icon name="trash" class="group-table-icons"></ion-icon></td>
+                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
+                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
             </tr>
 
             <tr>
                 <td>Investimento</td>
                 <td>R$ 400,00</td>
                 <td>Saída</td>
-                <td><ion-icon name="create" class="group-table-icons"></ion-icon>
-                    <ion-icon name="trash" class="group-table-icons"></ion-icon></td>
+                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
+                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
             </tr>
 
             <tr>
                 <td>Salário</td>
                 <td>R$ 1000,00</td>
                 <td>Entrada</td>
-                <td><ion-icon name="create" class="group-table-icons"></ion-icon>
-                    <ion-icon name="trash" class="group-table-icons"></ion-icon></td>
+                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
+                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
             </tr>
 
             <tr>
                 <td>*</td>
                 <td>*</td>
                 <td>*</td>
-                <td><ion-icon name="create" class="group-table-icons"></ion-icon>
-                    <ion-icon name="trash" class="group-table-icons"></ion-icon></td>
+                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
+                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
             </tr>
 
             <tr>
                 <td>*</td>
                 <td>*</td>
                 <td>*</td>
-                <td><ion-icon name="create" class="group-table-icons"></ion-icon>
-                    <ion-icon name="trash" class="group-table-icons"></ion-icon></td>
+                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
+                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
             </tr>
 
             <tr>
                 <td>*</td>
                 <td>*</td>
                 <td>*</td>
-                <td><ion-icon name="create" class="group-table-icons"></ion-icon>
-                    <ion-icon name="trash" class="group-table-icons"></ion-icon></td>
+                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
+                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
             </tr>
 
             <tr>
                 <td>*</td>
                 <td>*</td>
                 <td>*</td>
-                <td><ion-icon name="create" class="group-table-icons"></ion-icon>
-                    <ion-icon name="trash" class="group-table-icons"></ion-icon></td>
+                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
+                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
             </tr>
         </table>
     </main>
