--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     Proventos
                     <img src="icons/proventos.png" alt="" class="group-icons">
                 </h3>
-                <p>R$ 0,00</p>
+                <p>R$ 2.000.000,00</p>
             </div>
             <div class="blocks">
                 <h3 class="text">Gastos
@@ -86,6 +86,196 @@
             </tr>
 
             <tr>
+                <td>Salário</td>
+                <td>R$ 1000,00</td>
+                <td>Entrada</td>
+                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
+                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
+            </tr>
+
+            <tr>
+                <td>*</td>
+                <td>*</td>
+                <td>*</td>
+                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
+                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
+            </tr>
+
+            <tr>
+                <td>*</td>
+                <td>*</td>
+                <td>*</td>
+                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
+                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
+            </tr>
+
+            <tr>
+                <td>*</td>
+                <td>*</td>
+                <td>*</td>
+                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
+                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
+            </tr>
+
+            <tr>
+                <td>*</td>
+                <td>*</td>
+                <td>*</td>
+                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
+                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
+            </tr><tr>
+                <td>Salário</td>
+                <td>R$ 1000,00</td>
+                <td>Entrada</td>
+                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
+                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
+            </tr>
+
+            <tr>
+                <td>*</td>
+                <td>*</td>
+                <td>*</td>
+                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
+                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
+            </tr>
+
+            <tr>
+                <td>*</td>
+                <td>*</td>
+                <td>*</td>
+                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
+                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
+            </tr>
+
+            <tr>
+                <td>*</td>
+                <td>*</td>
+                <td>*</td>
+                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
+                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
+            </tr>
+
+            <tr>
+                <td>*</td>
+                <td>*</td>
+                <td>*</td>
+                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
+                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
+            </tr><tr>
+                <td>Salário</td>
+                <td>R$ 1000,00</td>
+                <td>Entrada</td>
+                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
+                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
+            </tr>
+
+            <tr>
+                <td>*</td>
+                <td>*</td>
+                <td>*</td>
+                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
+                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
+            </tr>
+
+            <tr>
+                <td>*</td>
+                <td>*</td>
+                <td>*</td>
+                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
+                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
+            </tr>
+
+            <tr>
+                <td>*</td>
+                <td>*</td>
+                <td>*</td>
+                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
+                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
+            </tr>
+
+            <tr>
+                <td>*</td>
+                <td>*</td>
+                <td>*</td>
+                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
+                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
+            </tr><tr>
+                <td>Salário</td>
+                <td>R$ 1000,00</td>
+                <td>Entrada</td>
+                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
+                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
+            </tr>
+
+            <tr>
+                <td>*</td>
+                <td>*</td>
+                <td>*</td>
+                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
+                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
+            </tr>
+
+            <tr>
+                <td>*</td>
+                <td>*</td>
+                <td>*</td>
+                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
+                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
+            </tr>
+
+            <tr>
+                <td>*</td>
+                <td>*</td>
+                <td>*</td>
+                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
+                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
+            </tr>
+
+            <tr>
+                <td>*</td>
+                <td>*</td>
+                <td>*</td>
+                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
+                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
+            </tr><tr>
+                <td>Salário</td>
+                <td>R$ 1000,00</td>
+                <td>Entrada</td>
+                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
+                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
+            </tr>
+
+            <tr>
+                <td>*</td>
+                <td>*</td>
+                <td>*</td>
+                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
+                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
+            </tr>
+
+            <tr>
+                <td>*</td>
+                <td>*</td>
+                <td>*</td>
+                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
+                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
+            </tr>
+
+            <tr>
+                <td>*</td>
+                <td>*</td>
+                <td>*</td>
+                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
+                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
+            </tr>
+
+            <tr>
+                <td>*</td>
+                <td>*</td>
+                <td>*</td>
+                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
+                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
+            </tr><tr>
                 <td>Salário</td>
                 <td>R$ 1000,00</td>
                 <td>Entrada</td>
