--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
                     <input type="radio" name="gender" id="radio">
                     <label for="saida">Saída</label>
                 </div>
-            
-                    <button type="submit" class="button">Salvar <img src="icons/adição.png" alt="" id="salvar"></button>
-               
+
+                <button type="submit" class="button">Salvar <img src="icons/adição.png" alt="" id="salvar"></button>
+
             </form>
         </div>
 
@@ -74,7 +74,8 @@
                 <td>R$ 200,00</td>
                 <td>Saída</td>
                 <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
+                    <ion-icon name="trash" class="group-icons-trash"></ion-icon>
+                </td>
             </tr>
 
             <tr>
@@ -82,7 +83,8 @@
                 <td>R$ 400,00</td>
                 <td>Saída</td>
                 <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
+                    <ion-icon name="trash" class="group-icons-trash"></ion-icon>
+                </td>
             </tr>
 
             <tr>
@@ -90,7 +92,8 @@
                 <td>R$ 1000,00</td>
                 <td>Entrada</td>
                 <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
+                    <ion-icon name="trash" class="group-icons-trash"></ion-icon>
+                </td>
             </tr>
 
             <tr>
@@ -98,7 +101,8 @@
                 <td>*</td>
                 <td>*</td>
                 <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
+                    <ion-icon name="trash" class="group-icons-trash"></ion-icon>
+                </td>
             </tr>
 
             <tr>
@@ -106,7 +110,8 @@
                 <td>*</td>
                 <td>*</td>
                 <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
+                    <ion-icon name="trash" class="group-icons-trash"></ion-icon>
+                </td>
             </tr>
 
             <tr>
@@ -114,7 +119,8 @@
                 <td>*</td>
                 <td>*</td>
                 <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
+                    <ion-icon name="trash" class="group-icons-trash"></ion-icon>
+                </td>
             </tr>
 
             <tr>
@@ -122,202 +128,13 @@
                 <td>*</td>
                 <td>*</td>
                 <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
-            </tr><tr>
-                <td>Salário</td>
-                <td>R$ 1000,00</td>
-                <td>Entrada</td>
-                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
-            </tr>
-
-            <tr>
-                <td>*</td>
-                <td>*</td>
-                <td>*</td>
-                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
-            </tr>
-
-            <tr>
-                <td>*</td>
-                <td>*</td>
-                <td>*</td>
-                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
-            </tr>
-
-            <tr>
-                <td>*</td>
-                <td>*</td>
-                <td>*</td>
-                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
-            </tr>
-
-            <tr>
-                <td>*</td>
-                <td>*</td>
-                <td>*</td>
-                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
-            </tr><tr>
-                <td>Salário</td>
-                <td>R$ 1000,00</td>
-                <td>Entrada</td>
-                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
-            </tr>
-
-            <tr>
-                <td>*</td>
-                <td>*</td>
-                <td>*</td>
-                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
-            </tr>
-
-            <tr>
-                <td>*</td>
-                <td>*</td>
-                <td>*</td>
-                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
-            </tr>
-
-            <tr>
-                <td>*</td>
-                <td>*</td>
-                <td>*</td>
-                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
-            </tr>
-
-            <tr>
-                <td>*</td>
-                <td>*</td>
-                <td>*</td>
-                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
-            </tr><tr>
-                <td>Salário</td>
-                <td>R$ 1000,00</td>
-                <td>Entrada</td>
-                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
-            </tr>
-
-            <tr>
-                <td>*</td>
-                <td>*</td>
-                <td>*</td>
-                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
-            </tr>
-
-            <tr>
-                <td>*</td>
-                <td>*</td>
-                <td>*</td>
-                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
-            </tr>
-
-            <tr>
-                <td>*</td>
-                <td>*</td>
-                <td>*</td>
-                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
-            </tr>
-
-            <tr>
-                <td>*</td>
-                <td>*</td>
-                <td>*</td>
-                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
-            </tr><tr>
-                <td>Salário</td>
-                <td>R$ 1000,00</td>
-                <td>Entrada</td>
-                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
-            </tr>
-
-            <tr>
-                <td>*</td>
-                <td>*</td>
-                <td>*</td>
-                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
-            </tr>
-
-            <tr>
-                <td>*</td>
-                <td>*</td>
-                <td>*</td>
-                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
-            </tr>
-
-            <tr>
-                <td>*</td>
-                <td>*</td>
-                <td>*</td>
-                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
-            </tr>
-
-            <tr>
-                <td>*</td>
-                <td>*</td>
-                <td>*</td>
-                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
-            </tr><tr>
-                <td>Salário</td>
-                <td>R$ 1000,00</td>
-                <td>Entrada</td>
-                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
-            </tr>
-
-            <tr>
-                <td>*</td>
-                <td>*</td>
-                <td>*</td>
-                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
-            </tr>
-
-            <tr>
-                <td>*</td>
-                <td>*</td>
-                <td>*</td>
-                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
-            </tr>
-
-            <tr>
-                <td>*</td>
-                <td>*</td>
-                <td>*</td>
-                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
-            </tr>
-
-            <tr>
-                <td>*</td>
-                <td>*</td>
-                <td>*</td>
-                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                    <ion-icon name="trash" class="group-icons-trash"></ion-icon></td>
+                    <ion-icon name="trash" class="group-icons-trash"></ion-icon>
+                </td>
             </tr>
         </table>
     </main>
     <footer>
-        <div class="paragrafo">Guilherme Dev,  © Copyright - Todos os Direitos Reservados </div>
+        <div class="paragrafo">Guilherme Dev, © Copyright - Todos os Direitos Reservados </div>
         <div class="icon">
             <a href="https://instagram.com/guilhermesantoszx?igshid=OGQ5ZDc2ODk2ZA=="><img src="icons/instagram.png"
                     alt="instagram" class="icones"></a>
