--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <label for="saida">Saída</label>
                 </div>
 
-                <button type="submit" class="button">Salvar <img src="icons/adição.png" alt="" id="salvar"></button>
+                <button type="submit" class="button">Salvar <ion-icon name="add-circle-outline" id="salvar"></ion-icon></button>
 
             </form>
         </div>
