--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
                 </div>
 
                 <div class="group-input-radio">
-                    <input type="radio" name="modalidade" id="radio">
+                    <input type="radio" name="modalidade" id="entrada" class="radio">
                     <label for="entrada">Entrada</label>
-                    <input type="radio" name="modalidade" id="radio">
+                    <input type="radio" name="modalidade" id="saida" class="radio">
                     <label for="saida">Saída</label>
                 </div>
                 <input type="hidden" name="id" id="formid">
