--- a/index.html
+++ b/index.html
@@ -71,49 +71,15 @@
             </tr>
 
             <tr>
-                <td>Nubank- Cartão de crédito</td>
-                <td>R$ 200,00</td>
-                <td>Saída</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
                 <td><ion-icon name="create" class="group-icons-create"></ion-icon>
                     <ion-icon name="trash" class="group-icons-trash"></ion-icon>
                 </td>
             </tr>
-
-            <tr>
-                <td>Investimento</td>
-                <td>R$ 400,00</td>
-                <td>Saída</td>
-                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                    <ion-icon name="trash" class="group-icons-trash"></ion-icon>
-                </td>
-            </tr>
-
-            <tr>
-                <td>Salário</td>
-                <td>R$ 1000,00</td>
-                <td>Entrada</td>
-                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                    <ion-icon name="trash" class="group-icons-trash"></ion-icon>
-                </td>
-            </tr>
-
-            <tr>
-                <td>*</td>
-                <td>*</td>
-                <td>*</td>
-                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                    <ion-icon name="trash" class="group-icons-trash"></ion-icon>
-                </td>
-            </tr>
-
-            <tr>
-                <td>*</td>
-                <td>*</td>
-                <td>*</td>
-                <td><ion-icon name="create" class="group-icons-create"></ion-icon>
-                    <ion-icon name="trash" class="group-icons-trash"></ion-icon>
-                </td>
-            </tr>
+            <div class="tableBody" id="listaTabela"></div>
         </table>
     </main>
     <footer>
